--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -99,7 +99,7 @@
             <img src="images/pocetna-slika5.jpg" alt="">
 
             <div class="text-slike">
-              <h1>Periferije</h1>
+              <h1>Periferija</h1>
             </div>
           </a>
         </div>
@@ -156,15 +156,13 @@
           </li>
 
           <li>
-            <a href="Periferije.html">Periferije</a>
+            <a href="Periferije.html">Periferija</a>
           </li>
 
           <li>
             <a href="Konzole.html">Konzole</a>
           </li>
-          <li>
-            <a href="Kontakt.html">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
