--- a/Laptopi.html
+++ b/Laptopi.html
@@ -25,7 +25,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -62,7 +62,7 @@
       <div class="box-laptop">
         <div class="velicina-boxa">
           <a href="asus-laptop.html">
-            <img src="/images/asus.jpg" alt="">
+            <img src="images/asus.jpg" alt="">
           </a>
         </div>
       </div>
@@ -70,7 +70,7 @@
       <div class="box-laptop">
         <div class="velicina-boxa">
           <a href="apple-laptop.html">
-            <img src="/images/apple.jpg" alt="">
+            <img src="images/apple.jpg" alt="">
           </a>
         </div>
 
@@ -79,7 +79,7 @@
       <div class="box-laptop">
         <div class="velicina-boxa">
           <a href="dell-laptop.html">
-            <img src="/images/del.jpg" alt="">
+            <img src="images/del.jpg" alt="">
           </a>
         </div>
       </div>
@@ -87,7 +87,7 @@
       <div class="box-laptop">
         <div class="velicina-boxa">
           <a href="lenovo-laptop.html">
-            <img src="/images/lenovo.jpg" alt="">
+            <img src="images/lenovo.jpg" alt="">
           </a>
         </div>
       </div>
@@ -126,9 +126,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
