--- a/acer-laptop.html
+++ b/acer-laptop.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -49,13 +49,13 @@
     <div class="product-container-laptop">
 
       <div class="product-box-laptop">
-        <img src="/images/acer laptop/acerlaptop1.jpg" alt="">
+        <img src="images/acer laptop/acerlaptop1.jpg" alt="">
         <h2>2022 Acer Nitro 5</h2>
         <p> 15.6" FHD 144Hz Gaming Notebook, <br> Intel Core
           i5-10300H Processor, NVIDIA GeForce GTX 1650, <br> WiFi 6, DTS X Ultra
           Audio, Backlit Keyboard, <br> Win 10 Home (16GB RAM | 1TB SSD)
         </p>
-        <p>1800 KM</p>
+        <p style=" font-weight: 800">1800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('2022 Acer Nitro 5')">Buy it now</a>
@@ -64,13 +64,13 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/acer laptop/acerlaptop2.jpg" alt="">
+        <img src="images/acer laptop/acerlaptop2.jpg" alt="">
         <h2>Acer Nitro 5 AN517-54-79L1 Gaming Laptop</h2>
         <p> | Intel Core i7-11800H | <br>
           NVIDIA GeForce RTX 3050Ti Laptop GPU | <br> 17.3" FHD 144Hz IPS
           Display |
           16GB DDR4 | 1TB NVMe SSD | <br> Killer Wi-Fi 6 | Backlit KB | Win 11</p>
-        <p>2400 KM</p>
+        <p style=" font-weight: 800">2400 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Nitro 5 AN517-54-79L1 Laptop')">Buy
@@ -80,7 +80,7 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/acer laptop/acerlaptop3.jpg" alt="">
+        <img src="images/acer laptop/acerlaptop3.jpg" alt="">
         <h2>Acer Nitro 5 AN517-55-72R4 Gaming Laptop</h2>
         <p> | Intel Core i7-12700H | <br>
           NVIDIA GeForce RTX 3050 Ti Laptop GPU <br> | 17.3" FHD 144Hz IPS
@@ -88,7 +88,7 @@
           |
           16GB DDR4 | 1TB PCIe Gen 4 SSD | <br> Killer Wi-Fi 6 | Red Backlit
           KB</p>
-        <p>2560 KM</p>
+        <p style=" font-weight: 800">2560 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Nitro 5 AN517-55-72R4 Laptop')">Buy
@@ -99,13 +99,13 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/acer laptop/acerlaptop4.jpg" alt="">
+        <img src="images/acer laptop/acerlaptop4.jpg" alt="">
         <h2>Acer Nitro 5 AN515-46-R0EQ Gaming</h2>
         <p> | AMD Ryzen 7 6800H <br>
           Octa-Core CPU | NVIDIA GeForce RTX 3070 Ti Laptop GPU | <br> 15.6" QHD
           FreeSync 165Hz IPS | 32GB DDR5 | <br> 1TB Gen 4 SSD | Wi-Fi 6E | RGB
           Backlit</p>
-        <p>3400 KM</p>
+        <p style=" font-weight: 800">3400 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Nitro 5 AN515-46-R0EQ Gaming')">Buy
@@ -115,7 +115,7 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/acer laptop/acerlaptop5.jpg" alt="">
+        <img src="images/acer laptop/acerlaptop5.jpg" alt="">
         <h2>Acer Nitro 5 AN517-41-R7EY Gaming </h2>
         <p>AMD Ryzen 5 5600H
           Hexa-Core
@@ -123,7 +123,7 @@
           | 8GB
           DDR4 <br>
           | 512GB NVMe SSD | WiFi 6 | Backlit Keyboard</p>
-        <p>1820 KM</p>
+        <p style=" font-weight: 800">1820 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Nitro 5 AN517-41-R7EY Gaming')">Buy
@@ -133,14 +133,14 @@
       </div>
 
       <div class="product-box-laptop">
-        <img src="/images/acer laptop/acerlaptop6.jpg" alt="">
+        <img src="images/acer laptop/acerlaptop6.jpg" alt="">
         <h2>Acer Predator Helios 300 PH315-54 PH315</h2>
         <p> 15.6" Gaming Notebook- Full HD - 1920 x 1080 - <br> Intel Core i7
           11th Gen i7-11800H Octa-core
           (8 Core) <br> 2.40 GHz - 16 GB RAM - 1 TB SSD
 
         </p>
-        <p>2400 KM</p>
+        <p style=" font-weight: 800">2400 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -186,9 +186,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
