--- a/acer-monitor.html
+++ b/acer-monitor.html
@@ -31,7 +31,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           AMD FreeSync Premium 165Hz Refresh | 1ms (VRB) | ZeroFrame Design |<br>
           1 x Display Port 1.4 & 2 x HDMI 2.0 Ports ED270R Mbmiiphx
         </p>
-        <p>320KM</p>
+        <p style=" font-weight: 800">320KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Nitro by Acer<')">Buy it now</a>
@@ -73,7 +73,7 @@
           2 x 2 Watt Speakers (1 x Display Port, 1 x HDMI & 1 x DVI)
         </p>
 
-        <p>400KM</p>
+        <p style=" font-weight: 800">400KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer KG251Q Jbmidpx')">Buy it now</a>
@@ -91,7 +91,7 @@
           Monitor AMD FreeSync Premium | Agile-Splendor IPS | <br>
           Overclock to 170Hz | Up to 0.5ms | 95% DCI-P3 | <br>
           1 x Display Port & 2 x HDMI 2.0</p>
-        <p>500KM</p>
+        <p style=" font-weight: 800">500KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Nitro XV272U Vbmiipr')">Buy it
@@ -110,7 +110,7 @@
           with Adaptive-Sync Technology, 240Hz <br>
           Refresh Rate, 1ms VRB, (Display Port & 2 x HDMI Ports), Black
         </p>
-        <p>800KM</p>
+        <p style=" font-weight: 800">800KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Nitro XZ320Q Xbmiiphx')">Buy it
@@ -126,7 +126,7 @@
           Monitor | NVIDIA G-SYNC Compatible | <br>
           Certified DisplayHDR600 | Up to <br>
           0.5ms | Up to 270Hz | 1 x Display Port, 2 x HDMI and 4 x USB 3.0</p>
-        <p>1998KM</p>
+        <p style=" font-weight: 800">1998KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Predator XB323U GXbmiiphzx')">Buy
@@ -143,7 +143,7 @@
           <br>
           DCI-P3 98% | 1 x USB 3.1 Type-C, <br>
           2 x Display Port & 2 x HDMI 2.0</p>
-        <p>1400KM</p>
+        <p style=" font-weight: 800">1400KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Acer Nitro XR343CK Pbmiipphuzx')">Buy
@@ -187,9 +187,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
