--- a/apple-laptop.html
+++ b/apple-laptop.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           Touch ID.
           Works with iPhone/iPad; <br>Space Gray
         </p>
-        <p>2000 KM</p>
+        <p style=" font-weight: 800">2000 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Apple 2020 MacBook Air Laptop')">Buy
@@ -72,7 +72,7 @@
           Display, 8GB RAM, 256GB SSD Storage, Backlit Keyboard, <br>1080p
           FaceTime
           HD Camera. Works with iPhone and iPad; <br> Silver</p>
-        <p>2400 KM</p>
+        <p style=" font-weight: 800">2400 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Apple 2022 MacBook Air LaptopR')">Buy
@@ -86,7 +86,7 @@
         <h2>Apple MacBook Pro </h2>
         <p>M2 Chip (13-inch, 16GB RAM, <br> 256GB SSD Storage) - <br>
           Space Gray (2022 Model) - <br> Z16R0005S</p>
-        <p>2800 KM</p>
+        <p style=" font-weight: 800">2800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Apple MacBook Pro ')">Buy it now</a>
@@ -99,7 +99,7 @@
         <h2>2019 Apple MacBook Pro </h2>
         <p>with 2.6GHz Intel Core i7 (15-inch, 16GB RAM, <br>
           512GB SSD Storage) <br> Silver (Renewed)</p>
-        <p>2900 KM</p>
+        <p style=" font-weight: 800">2900 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('2019 Apple MacBook Pro')">Buy it now</a>
@@ -110,9 +110,9 @@
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple5.jpg" alt="">
         <h2>Apple 2021 MacBook Pro</h2>
-        <p> (14-inch, M1 Pro chip with 8‑core CPU and <br>
-          14‑core GPU, 16GB RAM, 512GB SSD) - <br> Silver</p>
-        <p>3800 KM</p>
+        <p> (14-inch, M1 Pro chip with 8-core CPU and <br>
+          14-core GPU, 16GB RAM, 512GB SSD) - <br> Silver</p>
+        <p style=" font-weight: 800">3800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Apple 2021 MacBook Pro')">Buy it now</a>
@@ -123,9 +123,9 @@
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple6.jpg" alt="">
         <h2>Apple 2021 MacBook Pro</h2>
-        <p> (16-inch, M1 Pro chip with 10‑core CPU and <br>
-          16‑core GPU, 16GB RAM, 512GB SSD) - <br> Space Gray</p>
-        <p>3200 KM</p>
+        <p> (16-inch, M1 Pro chip with 10-core CPU and <br>
+          16-core GPU, 16GB RAM, 512GB SSD) - <br> Space Gray</p>
+        <p style=" font-weight: 800">3200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Apple 2021 MacBook Pro')">Buy it now</a>
@@ -168,9 +168,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
