--- a/asus-monitor.html
+++ b/asus-monitor.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           Extreme Low Motion Blur, Speaker, <br>
           FreeSync Premium, VESA Mountable, DisplayPort, HDMI
         </p>
-        <p>660 KM</p>
+        <p style=" font-weight: 800">660 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS TUF Gaming VG32VQ1B')">Buy it
@@ -72,7 +72,7 @@
           QHD (2560 x 1440), 165Hz (Supports 144Hz), 1ms, <br>
           Extreme Low Motion Blur, Speaker, <br>
           G-SYNC Compatible, VESA Mountable, DisplayPort, HDMI</p>
-        <p>600 KM</p>
+        <p style=" font-weight: 800">600 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS TUF Gaming VG27AQ')">Buy it
@@ -89,7 +89,7 @@
           FreeSync Premium technology,DisplayPort, HDMI, <br>
           Tripod socket for
           Webcam, DisplayHDR400</p>
-        <p>480 KM</p>
+        <p style=" font-weight: 800">480 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS ROG Strix XG276Q')">Buy it now</a>
@@ -104,7 +104,7 @@
           Full HD, 165Hz,Extreme Low Motion Blur, 0.5ms, <br>
           FreeSync Premium, Eye Care,DisplayPort, HDMI, <br>
           Shadow Boost, VESA Wall Mountable, Tilt Adjustable</p>
-        <p>300 KM</p>
+        <p style=" font-weight: 800">300 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS TUF Gaming VG248Q1B')">Buy
@@ -120,7 +120,7 @@
           UWQHD (3440 x 1440), 180Hz, 1ms, Extreme Low Motion Blur Sync, <br>
           135% sRGB, G-Sync Compatible, DisplayHDR 400, <br>
           Eye Care, USB-C, DisplayPort, HDMI</p>
-        <p>1560 KM</p>
+        <p style=" font-weight: 800">1560 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS ROG Strix XG349C')">Buy it now</a>
@@ -134,7 +134,7 @@
         <p> 21.5” Full HD 1920x1080 <br> 1ms HDMI VGA <br>
           Eye Care Monitor, <br>
           Blacklight</p>
-        <p>94</p>
+        <p style=" font-weight: 800">170 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Asus VP228HE')">Buy it now</a>
@@ -177,9 +177,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
