--- a/cooler.html
+++ b/cooler.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -58,7 +58,7 @@
 
 
         </p>
-        <p>480 KM</p>
+        <p style=" font-weight: 800">480 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('CORSAIR iCUE H150i ELITE')">Buy it
@@ -75,7 +75,7 @@
           V4-RGB Connector-Aer P 120mm <br> Radiator Fans (2 Included), Black, X
           Gen 3</p>
 
-        <p>270 KM</p>
+        <p style=" font-weight: 800">270 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('NZXT Kraken X53 240mm ')">Buy it now</a>
@@ -90,7 +90,7 @@
           Cooler, Gen3 Dual Chamber Pump,<br> 240mm Radiator, SickleFlow 120 PWM
           <br>
           ARGB, AMD Ryzen AM5/AM4, <br> Intel LGA1700/1200 (MLW-D24M-A18PC-R2)</p>
-        <p>180 KM</p>
+        <p style=" font-weight: 800">180 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -109,7 +109,7 @@
           <br>
           Radiator Fans, Compatible with Intel LGA1700, 1200 and AM5, <br>AM4
           Socket)</p>
-        <p>440 KM</p>
+        <p style=" font-weight: 800">440 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS ROG Ryujin II 240 ARGB')">Buy it
@@ -125,7 +125,7 @@
           Removable<br> 92mm PWM Fans, Fins Bending, 4-pin RGB CPU Cooler, RGB
           <br>
           Lighting for AMD Ryzen/Intel <br> LGA 1700 115X, Black</p>
-        <p>52 KM</p>
+        <p style=" font-weight: 800">52 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Jonsbo CR1400 RGB')">Buy it now</a>
@@ -141,7 +141,7 @@
           for
           <br>
           Computer Case & Liquid Radiator</p>
-        <p>130 KM</p>
+        <p style=" font-weight: 800">130 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Cooler Master MasterFan')">Buy it now</a>
@@ -185,9 +185,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
