--- a/dell-laptop.html
+++ b/dell-laptop.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -57,7 +57,7 @@
 
 
         </p>
-        <p>1920 KM</p>
+        <p style=" font-weight: 800">1920 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell G15')">Buy it now</a>
@@ -73,7 +73,7 @@
           RAM,
           512GB
           PCIe SSD, Killer Wi-Fi, <br> RGB Backlit Keyboard, Windows 10, Black</p>
-        <p>2900 KM</p>
+        <p style=" font-weight: 800">2900 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('2021 Dell G5 15 Gaming Laptop')">Buy
@@ -89,7 +89,7 @@
           64GB <br>DDR5 2TB NVMe SSD NVIDIA GeForce RTX 3060 6GB GDDR6 <br>
           Thunderbolt4
           HDMI2.1 WiFi AX BT RJ-45 Backlit KB Webcam <br> Windows 11 Pro</p>
-        <p>4200 KM</p>
+        <p style=" font-weight: 800">4200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell 2022 G15 ')">Buy it now</a>
@@ -105,7 +105,7 @@
           Backlit
           KYB,
           WiFi 6, BT 5.1, HD Webcam, Win11H), <br> Dark Side of the Moon</p>
-        <p> 3400 KM</p>
+        <p style=" font-weight: 800"> 3400 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -123,7 +123,7 @@
           Processor | 32GB RAM | 1TB SSD | <br> NVIDIA GeForce RTX 3050 Ti |
           Backlit
           Keyboard | Wi-Fi 6 | <br> Windows 10 Home | Gray</p>
-        <p>1960 KM</p>
+        <p style=" font-weight: 800">1960 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell G15 ')">Buy it now</a>
@@ -138,7 +138,7 @@
           Intel Core i5-1135G7 Processor <br>(Beats i7-1065G7), Intel Iris Xe
           Graphics, 16GB RAM, 1TB SDD, <br> Webcam, Wi-Fi, Bluetooth, <br>
           Windows 11</p>
-        <p>1600 KM</p>
+        <p style=" font-weight: 800">1600 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -184,9 +184,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
