--- a/dell-monitor.html
+++ b/dell-monitor.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -55,7 +55,7 @@
           <br>
           Cable and USB 3.0 Upstream Cable - <br> New Model
         </p>
-        <p>249</p>
+        <p style=" font-weight: 800">500 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell P2422H 24')">Buy it now</a>
@@ -70,7 +70,7 @@
           Refresh Rate, 4MS Grey-to-Grey Response Time (Extreme Mode), Dual 3W
           <br>
           Built-in Speakers, HDMI, IPS, AMD FreeSync, Silver - S2723HC</p>
-        <p>200</p>
+        <p style=" font-weight: 800">400 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell 27-inch USB-C Monitor')">Buy it
@@ -85,7 +85,7 @@
         <p> Full HD 1920 x 1080p, 75Hz IPS LED LCD Thin Bezel <br>
           Adjustable Gaming Monitor, 4ms Grey-to-Grey Response Time, 16.7 <br>
           Million Colors, HDMI ports, AMD FreeSync, Platinum Silver</p>
-        <p>210</p>
+        <p style=" font-weight: 800">420 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell S2721HS')">Buy it now</a>
@@ -101,7 +101,7 @@
           Response Time, IPS, AMD FreeSync Technology, 99% sRGB Color Gamut,
           <br>
           NVIDIA G-Sync Compatible, HDMI, DisplayPort, Black - G2422HS</p>
-        <p>172</p>
+        <p style=" font-weight: 800">350 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell 24-Inch')">Buy it now</a>
@@ -115,7 +115,7 @@
         <p> 27 Inch Curved with 165Hz Refresh Rate,
           <br>
           QHD (2560 x 1440) Display, Black - S2722DGM</p>
-        <p>189</p>
+        <p style=" font-weight: 800">380 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell Curved Gaming Monitor')">Buy it
@@ -130,7 +130,7 @@
         <p> 32 Inch Curved 4K UHD, VA Ultra-Thin Bezel Monitor, AMD
           <br>
           FreeSync, HDMI, DisplayPort, Built in Speakers, VESA Certified, Silver</p>
-        <p>240</p>
+        <p style=" font-weight: 800">480 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell S3221QSR')">Buy it now</a>
@@ -173,9 +173,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
