--- a/externa memorija.html
+++ b/externa memorija.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -54,7 +54,7 @@
         <p> Basics 2TB Portable External Hard Drive USB 3.0, Black <br>
           - HDTB420XK3AA
         </p>
-        <p>120 KM</p>
+        <p style=" font-weight: 800">120 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Toshiba Canvio')">Buy it now</a>
@@ -67,7 +67,7 @@
         <h2>WD 5TB</h2>
         <p> Elements Portable HDD, External Hard Drive, USB 3.0 for PC & <br>
           Mac, Plug and Play Ready - WDBU6Y0050BBK-WESN</p>
-        <p>200 KM</p>
+        <p style=" font-weight: 800">200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('WD 5TB')">Buy it now</a>
@@ -80,7 +80,7 @@
         <h2>WD_BLACK</h2>
         <p> 5TB P10 Game Drive - Portable External Hard Drive HDD, <br>
           Compatible with Playstation, Xbox, PC, & Mac - WDBA3A0050BBK-WESN</p>
-        <p>240 KM</p>
+        <p style=" font-weight: 800">240 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('WD_BLACK')">Buy it now</a>
@@ -95,7 +95,7 @@
           USB Drive Data Storage with<br> Keychain Design Pen Drive Jump Drive
           for
           Data Backup and Transfer for PC/Laptop</p>
-        <p>60 KM</p>
+        <p style=" font-weight: 800">60 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('USB Flash Drive')">Buy it now</a>
@@ -104,10 +104,10 @@
       </div>
 
       <div class="product-box-externa">
-        <img src="images/eksterna memorija/e5.jpg" alt="">
+        <img src="images/eksterna memorija/e5.webp" alt="">
         <h2>SanDisk 128GB</h2>
         <p> Ultra Flair USB 3.0 Flash Drive - <br> SDCZ73-128G-G46</p>
-        <p>30 KM</p>
+        <p style=" font-weight: 800">30 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SanDisk 128GB')">Buy it now</a>
@@ -121,7 +121,7 @@
         <p> 32 GB 5 Pack Thumb Drive 32GB USB Flash Drive <br>
           Memory Stick Flash Drives USB 2.0, 5 Multi-Color (Black, Blue, Green,
           White, Red)</p>
-        <p>32 KM</p>
+        <p style=" font-weight: 800">32 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('KEXIN Flash Drive')">Buy it now</a>
@@ -134,7 +134,7 @@
         <h2>Amazon Basics</h2>
         <p> microSDXC Memory Card with Full Size Adapter, A2, U3, <br>
           Read Speed up to 100 MB/s, 128 GB</p>
-        <p>24 KM</p>
+        <p style=" font-weight: 800">24 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Amazon Basics')">Buy it now</a>
@@ -147,7 +147,7 @@
         <h2>512GB Micro SD1</h2>
         <p> Card Class 10 High Speed Memory Card for Android <br>
           Smartphone, Cameras,Tablet and Drone(512GB</p>
-        <p>40 KM</p>
+        <p style=" font-weight: 800">40 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('512GB Micro SD1')">Buy it now</a>
@@ -161,7 +161,7 @@
         <p> Select Micro SD-Memory-Card + Adapter, 256GB microSDXC
           130MB/s Full HD & 4K <br>UHD, UHS-I, U3, A2, V30, Expanded Storage for
           Android Smartphones, <br> Tablets, Nintendo-Switch (MB-ME256KA/AM)</p>
-        <p>50 KM</p>
+        <p style=" font-weight: 800">50 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG EVO')">Buy it now</a>
@@ -174,7 +174,7 @@
         <h2>Optical Quantum </h2>
         <p>Blue AZO CD-R 700MB 52X <br> Recordable Media Disc 100pk <br>
           Spindle OQCD52BLT-BX</p>
-        <p>40 KM</p>
+        <p style=" font-weight: 800">40 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Optical Quantum ')">Buy it now</a>
@@ -187,7 +187,7 @@
         <h2>Verbatim DVD+R</h2>
         <p> 4.7GB 16x AZO Recordable Media Disc - 100 Disc Spindle <br>
           (FFP) - 97459, Branded, 100pk Spindle FFP</p>
-        <p>50 KM</p>
+        <p style=" font-weight: 800">50 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Verbatim DVD+R')">Buy it now</a>
@@ -202,7 +202,7 @@
           ,Shockproof and Dustproof Function, <br> Storage Case for HDD External
           Hard
           Drive Case,Gray,5 Pack-PHP35</p>
-        <p>46 KM</p>
+        <p style=" font-weight: 800">46 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ORICO 3.5')">Buy it now</a>
@@ -217,7 +217,7 @@
           Tool-Free Clear for 2.5 Inch SSD & <br>HDD 9.5mm 7mm External Hard
           Drive
           Case Supports UASP SATA</p>
-        <p>20 KM</p>
+        <p style=" font-weight: 800">20 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Reletech 2.5')">Buy it now</a>
@@ -230,7 +230,7 @@
         <h2>SABRENT USB 3.0</h2>
         <p> 3.0 to SATA External Hard Drive Lay Flat Docking Station <br>
           for 2.5 or 3.5in HDD, SSD [Support UASP and 20TB] (EC-DFLT)</p>
-        <p>48 KM</p>
+        <p style=" font-weight: 800">48 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SABRENT USB 3.0')">Buy it now</a>
@@ -276,9 +276,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
