--- a/graficka kartica.html
+++ b/graficka kartica.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -54,7 +54,7 @@
         <p> 6GB GDDR5 192-bit Gaming Graphics Card, <br>
           Super Compact, <br> ZT-T16600K-10M
         </p>
-        <p>440 KM</p>
+        <p style=" font-weight: 800">440 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ZOTAC Gaming GeForce GTX 1660')">Buy
@@ -69,7 +69,7 @@
         <p>Twin Edge OC 12GB GDDR6 192-bit 15 Gbps <br>
           PCIE 4.0 Gaming Graphics Card, IceStorm 2.0 Cooling, <br>Active Fan
           Control, Freeze Fan Stop ZT-A30600H-10M</p>
-        <p>700 KM</p>
+        <p style=" font-weight: 800">700 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ZOTAC Gaming GeForce RTX 3060 ')">Buy
@@ -84,7 +84,7 @@
         <p> AMP Holo 8GB GDDR6X 256-bit 19 Gbps
           PCIE 4.0 <br>Gaming Graphics Card, HoloBlack, IceStorm 2.0 Advanced
           Cooling,<br> Spectra 2.0 RGB Lighting, ZT-A30710F-10P</p>
-        <p>1900 KM</p>
+        <p style=" font-weight: 800">1900 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ZOTAC Gaming GeForce RTX™ 3070 Ti')">Buy
@@ -99,7 +99,7 @@
         <p> Ultra Gaming Graphics Card
           <br>
           with 8GB GDDR6 HDMI 3xDP, AMD RDNA 2 RX-665X8LUDY</p>
-        <p>620 KM</p>
+        <p style=" font-weight: 800">620 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('XFX Speedster Radeon RX 6650XT')">Buy
@@ -114,7 +114,7 @@
         <p>128-bit 8GB GDDR6 DP/HDMI Dual Torx
           Fans FreeSync <br>DirectX 12 VR Ready Graphics Card (RX 6600 MECH 2X
           8G)</p>
-        <p>615 KM</p>
+        <p style=" font-weight: 800">615 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI Gaming AMD Radeon RX 6600')">Buy
@@ -128,7 +128,7 @@
         <h2>XFX Speedster AMD Radeon RX 7900XT</h2>
         <p> Ultra Gaming Graphics Card <br>
           with 20GB GDDR6, AMD RDNA 3 RX-79TMERCU9</p>
-        <p>1900 KM</p>
+        <p style=" font-weight: 800">1900 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -174,9 +174,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
