--- a/hdd.html
+++ b/hdd.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -54,7 +54,7 @@
         <p>2TB WD Blue PC <br> Internal Hard Drive - 7200 RPM
           Class, <br> SATA 6 Gb/s,<br> 256 MB Cache, 3.5" - WD20EZBX
         </p>
-        <p>88 KM</p>
+        <p style=" font-weight: 800">88 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Western Digital 2TB')">Buy it now</a>
@@ -69,7 +69,7 @@
           RPM,
 
           SATA 6 Gb/s, <br> 128 MB Cache, 3.5" - <br> WD80EAZZ</p>
-        <p>220 KM</p>
+        <p style=" font-weight: 800">220 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Western Digital 8TB')">Buy it now</a>
@@ -84,7 +84,7 @@
             6Gbs5900 RPM 64MB Cache for RAID <br>Network Attached
             Storage,Rescue Services– <br> Frustration Free Packaging
             (ST4000VNZ06)</p>
-          <p>150 KM</p>
+          <p style=" font-weight: 800">150 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Seagate IronWolf 4TB ')">Buy it
@@ -104,7 +104,7 @@
             Enhanced
             <br>
             Caching (ST18000NM000J)</p>
-          <p>600 KM</p>
+          <p style=" font-weight: 800">600 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Seagate Exos X18 18TB')">Buy it
@@ -120,7 +120,7 @@
             Enterprise Internal Hard Drive (WD4000FYYZ) <br>OEM - 3 Years
             Warranty
             (Renewed)</p>
-          <p>97 KM</p>
+          <p style=" font-weight: 800">97 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Western Digital RE 4TB')">Buy it
@@ -134,7 +134,7 @@
           <h2>Western Digital</h2>
           <p> 4TB WD Red NAS Internal Hard Drive HDD - 5400 RPM <br>
             SATA 6 Gb/s, SMR, 256MB Cache, 3.5" - <br> WD40EFAX</p>
-          <p>150 KM</p>
+          <p style=" font-weight: 800">150 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Western Digital 4TB')">Buy it
@@ -179,9 +179,7 @@
             <li>
               <a href="#">Konzole</a>
             </li>
-            <li>
-              <a href="#">Kontakt</a>
-            </li>
+
           </ul>
           <p class="copyright">copyright© 2022 Ahmed</p>
         </div>
