--- a/intel-pc.html
+++ b/intel-pc.html
@@ -31,7 +31,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -57,7 +57,7 @@
           Windows
           10 Home 64-bit
         </p>
-        <p>2200 KM</p>
+        <p style=" font-weight: 800">2200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Skytech Blaze 3.0')">Buy it now</a>
@@ -72,7 +72,7 @@
           NVIDIA RTX 3080, 1TB NVME SSD, <br> 32GB DDR5 RAM RGB, 850W Gold PSU,
           360mm<br>
           AIO, 11AC Wi-Fi, Windows 11 Home 64-bit</p>
-        <p>3000 KM</p>
+        <p style=" font-weight: 800">3000 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Skytech Chronos Gaming PC')">Buy it
@@ -89,7 +89,7 @@
           DDR4 <br>3200MHz, RGB
           Fans, Windows 10 Home 64-bit, <br> 802.11AC Wi-Fi, White</p>
 
-        <p>2400 KM</p>
+        <p style=" font-weight: 800">2400 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Skytech Gaming Archangel ')">Buy it
@@ -106,7 +106,7 @@
           PSU,
           11
           AC Wi-Fi, Windows 11 Home 64-bit</p>
-        <p>3600 KM</p>
+        <p style=" font-weight: 800">3600 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Skytech Chronos Gaming PC<')">Buy it
@@ -123,7 +123,7 @@
           RGB Fans, AC WiFi, <br>
           Windows 10 Home 64-bit</p>
 
-        <p>1300 KM</p>
+        <p style=" font-weight: 800">1300 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SkyTech Chronos Mini Gaming')">Buy it
@@ -140,7 +140,7 @@
           650W Gold PSU, AC Wi-Fi, Windows 10 Home 64-bit
 
         </p>
-        <p>1500$</p>
+        <p style=" font-weight: 800">1500$</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Skytech Shiva Gaming PC')">Buy it now</a>
@@ -184,9 +184,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
