--- a/mikrofon.html
+++ b/mikrofon.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           Streaming, Podcast, Twitch, YouTube, <br> Discord, Computer, Mac, PS5
           -DM30
         </p>
-        <p>100 KM</p>
+        <p style=" font-weight: 800">100 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MAONO Gaming Microphone')">Buy it now</a>
@@ -74,7 +74,7 @@
           Podcast
 
           YouTube Discord</p>
-        <p>64 KM</p>
+        <p style=" font-weight: 800">64 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('WMT USB Microphone')">Buy it now</a>
@@ -88,7 +88,7 @@
         <p> USB Streaming Microphone: Professional Grade - <br>
           Built-in Shock Mount - Supercardiod Pick-Up Pattern<br - Anodized>
           Aluminum - <br> Classic Black</p>
-        <p>160 KM</p>
+        <p style=" font-weight: 800">160 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Razer Seiren X')">Buy it now</a>
@@ -102,7 +102,7 @@
         <p>Microphone with One-Touch Mute and Gain Knob,<br> Professional
           Condenser Computer PC Mic for <br>Podcasting, Recording, Gaming, Live
           Streaming, <br> Zoom Meeting, Studio,YouTube, Skype, AU-PM421</p>
-        <p>160 KM</p>
+        <p style=" font-weight: 800">160 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MAONO USB Microphone')">Buy it now</a>
@@ -118,7 +118,7 @@
           Podcasting,
 
           Broadcast, <br> Vocals, Instrument, Classic Design</p>
-        <p>260 KM</p>
+        <p style=" font-weight: 800">260 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Donner DC-87 XLR')">Buy it now</a>
@@ -134,7 +134,7 @@
           Sound
 
           Effect Plugins, Anti-Distortion, <br> Plug ’n Play, for Mac, PC</p>
-        <p>300 KM</p>
+        <p style=" font-weight: 800">300 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Elgato Wave:3 ')">Buy it now</a>
@@ -178,9 +178,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
