--- a/mrezna oprema.html
+++ b/mrezna oprema.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           A
           Certified for Humans Device
         </p>
-        <p>200 KM</p>
+        <p style=" font-weight: 800">200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('TP-Link AX1800')">Buy it now</a>
@@ -70,7 +70,7 @@
         <p>WiFi Router (Archer A54) - Dual Band Wireless Internet
           Router, 4 x 10/100 Mbps<br> Fast Ethernet Ports, Supports Guest WiFi,
           Access Point Mode, <br> IPv6 and Parental Controls</p>
-        <p>70 KM</p>
+        <p style=" font-weight: 800">70 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('TP-Link AC1200')">Buy it now</a>
@@ -85,7 +85,7 @@
           Router, Easy Setup,<br> Parental Control, USB 3.0, AiRadar
           Beamforming
           Technology extends Speed, <br> Stability & Coverage, MU-MIMO</p>
-        <p>160 KM</p>
+        <p style=" font-weight: 800">160 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS AC1750')">Buy it now</a>
@@ -94,12 +94,12 @@
       </div>
 
       <div class="product-box-mreza">
-        <img src="images/mrezna oprema/m4.jpg" alt="">
+        <img src="images/mrezna oprema/m4.webp" alt="">
         <h2>TP-Link TL-SG108</h2>
         <p> 8 Port Gigabit Unmanaged Ethernet Network Switch,
           Ethernet Splitter | <br> Plug & Play | Fanless Metal Design | Shielded
           Ports | Traffic Optimization | <br> Limited Lifetime Protection</p>
-        <p>80 KM</p>
+        <p style=" font-weight: 800">80 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('TP-Link TL-SG108')">Buy it now</a>
@@ -113,7 +113,7 @@
         <p> 5 Port Gigabit Unmanaged Ethernet Network Switch,
           Ethernet Splitter | Plug & Play | <br> Fanless Metal Design | Shielded
           Ports | Traffic Optimization | <br> Limited Lifetime Protection</p>
-        <p>40 KM</p>
+        <p style=" font-weight: 800">40 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('TP-Link TL-SG105')">Buy it now</a>
@@ -124,10 +124,10 @@
       <div class="product-box-mreza">
         <img src="images/mrezna oprema/m6.jpg" alt="">
         <h2>NETGEAR</h2>
-        <p> 5-Port Gigabit Ethernet Unmanaged Switch (GS305) - <br> Home
+        <p> 5-Port Gigabit Ethernet Unmanaged Switch (GS305P) - <br> Home
           Network Hub, Office Ethernet Splitter, Plug-and-Play, <br> Silent
           Operation, Desktop or Wall Mount</p>
-        <p>44 KM</p>
+        <p style=" font-weight: 800">44 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('NETGEAR')">Buy it now</a>
@@ -142,7 +142,7 @@
           Adapter with <br>Intel 82575/82576 Two Ports LAN NIC Card for Support
           PXE <br>
           for Windows/Windows Server/Linux/Freebsd /DOS with Low Profile</p>
-        <p>80 KM</p>
+        <p style=" font-weight: 800">80 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dual-Port')">Buy it now</a>
@@ -156,7 +156,7 @@
         <p> PCIe WiFi Card for PC (Archer T5E) - Bluetooth 4.2,<br>
           Dual Band Wireless Network Card (2.4Ghz and 5Ghz) for Gaming,
           Streaming, <br> Supports Windows 10, 8.1, 8, 7 (32/64-bit)</p>
-        <p>80 KM</p>
+        <p style=" font-weight: 800">80 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('TP-Link AC1200')">Buy it now</a>
@@ -171,7 +171,7 @@
           2400Mbps, Bluetooth 5.2, <br> 802.11AX Dual Band Wireless Adapter with
           MU-MIMO,OFDMA,Ultra-Low Latency, <br> Supports Windows 11, 10 (64bit)
           only</p>
-        <p>120 KM</p>
+        <p style=" font-weight: 800">120 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('TP-Link WiFi')">Buy it now</a>
@@ -185,7 +185,7 @@
           40Gbps,2000Mhz Braided Internet Cable, <br> Gold Plated RJ45
           Connector, LAN
           Cable S/FTP Network Cable for <br> Modem/Router/PS4/5/Gaming/PC</p>
-        <p>24 KM</p>
+        <p style=" font-weight: 800">24 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Cat 8 Ethernet Cable 15 FT')">Buy it
@@ -199,7 +199,7 @@
         <h2>Cable Matters</h2>
         <p> 10Gbps Snagless Cat 6 Ethernet Cable 25 ft<br> (Cat 6
           Cable, Cat6 Cable, Internet Cable, Network Cable) <br> in Black</p>
-        <p>40 KM</p>
+        <p style=" font-weight: 800">40 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Cable Matters')">Buy it now</a>
@@ -215,7 +215,7 @@
           Network Patch Cord, <br>High Speed Internet Cable, UTP, RJ45, 24AWG,
           500MHz, Compatible with Router, <br> Modem, Smart TV, PS5, Xbox, 3
           Pack</p>
-        <p>120 KM</p>
+        <p style=" font-weight: 800">120 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MAXLIN CABLE Cat6')">Buy it now</a>
@@ -230,7 +230,7 @@
           Devices, Up to<br> 1200Mbps Dual Band WiFi Booster Repeater,Access
           Point,
           Supports OneMesh</p>
-        <p>100 KM</p>
+        <p style=" font-weight: 800">100 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('TP-Link AC1200')">Buy it now</a>
@@ -246,7 +246,7 @@
           Port &
           AP Mode, Support 40 Devices,1 Touch Easy Setup
         </p>
-        <p>120 KM/p>
+        <p style=" font-weight: 800">120 KM/p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('WiFi Extender')">Buy it
@@ -262,7 +262,7 @@
             35 Devices, <br> 1900Mbps Dual Band Wireless Repeater, <br> Internet
             Booster,
             Gigabit Ethernet Port</p>
-          <p>140 KM</p>
+          <p style=" font-weight: 800">140 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('TP-Link AC1900')">Buy it
@@ -274,12 +274,13 @@
         <div class="product-box-mreza">
           <img src="images/mrezna oprema/m16.jpg" alt="">
           <h2>Eightwood </h2>
-          <p>Dual WiFi Antenna with RP-SMA Male Connector, 2.4GHz 5GHz
+          <p style=" font-weight: 800">Dual WiFi Antenna with RP-SMA Male
+            Connector, 2.4GHz 5GHz
             Dual Band <br>Antenna Magnetic Base for PCI-E WiFi Network Card USB
             <br>
             WiFi
             Adapter Wireless Router</p>
-          <p>30 KM</p>
+          <p style=" font-weight: 800">30 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Eightwood')">Buy it
@@ -295,7 +296,7 @@
             U.FL/IPEX to RP-SMA <br>Female Pigtail Cable for Mini PCIe Card
             Wireless
             Routers, PC Desktop, Repeater, <br> FPV UAV Drone and PS4 Build</p>
-          <p>18 KM</p>
+          <p style=" font-weight: 800">18 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('2 x 8dBi WiFi RP-SMA')">Buy it
@@ -311,7 +312,7 @@
             5.8GHz Dual Band Antenna for PCI-E WiFi Network Card USB Wireless
             <br>
             Camera Router Hotspot etc. 2pcs</p>
-          <p>24 KM</p>
+          <p style=" font-weight: 800">24 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Superbat WiFi Antenna')">Buy it
@@ -358,9 +359,7 @@
             <li>
               <a href="#">Konzole</a>
             </li>
-            <li>
-              <a href="#">Kontakt</a>
-            </li>
+
           </ul>
           <p class="copyright">copyright© 2022 Ahmed</p>
         </div>
