--- a/napojna.html
+++ b/napojna.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -59,7 +59,7 @@
           <br>
           Supply PS-SPD-0500NPCWUS-W
         </p>
-        <p>70 KM</p>
+        <p style=" font-weight: 800">70 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Thermaltake Smart')">Buy it now</a>
@@ -72,7 +72,7 @@
         <h2>Thermaltake Toughpower</h2>
         <p> 750W 80 Plus Gold <br> Semi Modular PSU ATX
           12V or EPS 12V <br>Ultra Quiet Power Supply <br> PS-TPD-0750MPCGUS-1</p>
-        <p>190 KM</p>
+        <p style=" font-weight: 800">190 KM</p>
 
 
 
@@ -89,7 +89,7 @@
           120mm
           <br>
           Fan, Single +12V Rail, <br> Flat Black Cables</p>
-        <p>110 KM</p>
+        <p style=" font-weight: 800">110 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Cooler Master MWE ')">Buy it now</a>
@@ -101,7 +101,7 @@
         <img src="images/napojna (2)/napojna4.jpg" alt="">
         <h2>Power Supply</h2>
         <p>850W 80+ Gold PSU Fully Modular ATX PSU</p>
-        <p>220 KM</p>
+        <p style=" font-weight: 800">220 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Power Supply')">Buy it now</a>
@@ -114,7 +114,7 @@
         <h2>Corsair </h2>
         <p> RMx Series(2021), RM850x, 850 Watt, GOLD, Fully Modular <br>
           Power Supply (CP-9020200-NA)</p>
-        <p>280 KM</p>
+        <p style=" font-weight: 800">280 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Corsair RMx Series 2021')">Buy it
@@ -129,7 +129,7 @@
         <p>750 Fully Modular 80 Plus Gold 750W ATX Power Supply
           <br>
           with 0dB Axial Tech Fan and 10 Year Warranty</p>
-        <p>300 KM</p>
+        <p style=" font-weight: 800">300 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS ROG Strix ')">Buy it now</a>
@@ -173,9 +173,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
