--- a/ram memorija.html
+++ b/ram memorija.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -55,7 +55,7 @@
           <br>
           Desktop memory – Black
         </p>
-        <p>220 KM</p>
+        <p style=" font-weight: 800">220 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Corsair Vengeance RGB Pro')">Buy it
@@ -70,7 +70,7 @@
         <p> 32GB (2x16GB) DDR4 3600 (PC4-28800) C18
           <br>
           1.35V Desktop Memory - White (CMH32GX4M2D3600C18W)</p>
-        <p>210 KM</p>
+        <p style=" font-weight: 800">210 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Corsair Vengeance RGB Pro SL')">Buy
@@ -85,7 +85,7 @@
         <p>32GB (2 x 16GB) 288-Pin SDRAM DDR4 3600
           <br>
           CL18-22-22-42 1.35V Dual Channel Desktop Memory F4-3600C18D-32GTZR</p>
-        <p>210 KM</p>
+        <p style=" font-weight: 800">210 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('G.Skill Trident Z RGB Series ')">Buy
@@ -100,7 +100,7 @@
         <p> 64GB (4x16GB) DDR4 3600 (PC4-28800) C18
           <br>
           Desktop Memory – Black, CMW64GX4M4D3600C18</p>
-        <p>229</p>
+        <p style=" font-weight: 800">229</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Corsair Vengeance RGB Pro')">Buy it
@@ -116,7 +116,7 @@
           CL16-18-18-38 XMP2.0 Overclocking 1.35V Dual Rank Compatible for AMD
           <br>
           and Intel Desktop Gaming PC Memory Module - White</p>
-        <p>120 KM</p>
+        <p style=" font-weight: 800">120 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Timetec Pinnacle Konduit RGB')">Buy
@@ -131,7 +131,7 @@
         <p> 32GB (2 x 16GB) 288-Pin SDRAM DDR4 3600 <br>
           (PC4-28800) CL18-22-22-42 1.35V Dual Channel Desktop Memory Model <br>
           F4-3600C18D-32GVK</p>
-        <p>180 KM</p>
+        <p style=" font-weight: 800">180 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('G.Skill Ripjaws V Series')">Buy it
@@ -176,9 +176,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
