--- a/ryzen-pc.html
+++ b/ryzen-pc.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           <BR>
           600W Gold PSU, 240mm AIO, AC Wi-Fi, <br> Windows 11 Home 64-bit
         </p>
-        <p>3000 KM</p>
+        <p style=" font-weight: 800">3000 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Skytech Shadow Gaming Pc')">
@@ -74,7 +74,7 @@
           1000W Gold, 360mm AIO, <br>AC WiFi, Windows 10 Home 64-bit
 
 
-          <p>5000 KM</p>
+          <p style=" font-weight: 800">5000 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Skytech Prism II Gaming PC')">Buy
@@ -89,7 +89,7 @@
           <p> AMD Ryzen 5 3600 4.2GHz RTX 3060 <br>
             12GB Desktop PC • 16GB 3200MHz • 240GB SSD <br> • 1TB Hard Drive •
             600Mbps Wifi • <br> PC Gaming, Gaming Computer • Windows 10
-            <p>2400 KM</p>
+            <p style=" font-weight: 800">2400 KM</p>
 
             <div class="opcije">
               <a href="#" onclick="buyProduct('ADMI | Gaming PC')">Buy it now</a>
@@ -103,7 +103,7 @@
             <p>- AMD Ryzen 7 2700X, <br> NVIDIA RTX
               2070 Super 8GB, <br> 16GB DDR4 (2x 8GB), <br> 1TB SSD, 650 Watt
               Gold</p>
-            <p>3600 KM</p>
+            <p style=" font-weight: 800">3600 KM</p>
 
             <div class="opcije">
               <a href="#" onclick="buyProduct('Skytech Chronos Gaming PC ')">Buy
@@ -119,7 +119,7 @@
               RTX 3060 Ti, 1TB NVME SSD, <br> 16G DDR4 3200, 600W Gold PSU, AC
               Wi-Fi, <br> Windows 10 Home 64-bit</p>
 
-            <p>3580 KM</p>
+            <p style=" font-weight: 800">3580 KM</p>
 
             <div class="opcije">
               <a href="#" onclick="buyProduct('SkytechBlaze 3.0 Gaming')">Buy it
@@ -135,7 +135,7 @@
               RTX 3060 Ti 8GB GDDR6, 16GB DDR4 3000, <br> 1TB NVME, B550
               Motherboard,
               600W Gold PSU, <br>AC WiFi, Windows 10 Home 64-bit</p>
-            <p>2700 KM</p>
+            <p style=" font-weight: 800">2700 KM</p>
 
             <div class="opcije">
               <a href="#" onclick="buyProduct('Skytech Shadow 3.0 Gaming')">Buy
@@ -200,9 +200,7 @@
               <li>
                 <a href="#">Konzole</a>
               </li>
-              <li>
-                <a href="#">Kontakt</a>
-              </li>
+
             </ul>
             <p class="copyright">copyright© 2022 Ahmed</p>
           </div>
