--- a/samsung-monitor.html
+++ b/samsung-monitor.html
@@ -31,7 +31,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           AMD FreeSync for Advanced Gaming, 4ms Response Time, <br>
           Wide Viewing Angle, Ultra Slim Design, LC24F396FHNXZA, Black
         </p>
-        <p>320 KM</p>
+        <p style=" font-weight: 800">320 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -72,7 +72,7 @@
         <p>34-Inch SJ55W Ultrawide Gaming Monitor (LS34J550WQNXZA) <br>
           75Hz Refresh, WQHD Computer Monitor, 3440 x 1440p Resolution, 4ms <br>
           Response, FreeSync, Split Screen, HDMI, Black</p>
-        <p>560 KM</p>
+        <p style=" font-weight: 800">560 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG LS34J550WQNXZA')">Buy it now</a>
@@ -87,7 +87,7 @@
           Monitor for Business with VGA, HDMI, DisplayPort, and USB Hub, 3-Year
           <br>
           Warranty</p>
-        <p>370 KM</p>
+        <p style=" font-weight: 800">370 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG S27R650FDN')">Buy it now</a>
@@ -102,7 +102,7 @@
           Gaming Monitor, Quantum HDR2000, AMD FreeSync Premium Pro, Ultrawide
           <br>
           Game View, DisplayPort, HDMI, Height Adjustable Stand, Black, 2022</p>
-        <p>2370 KM</p>
+        <p style=" font-weight: 800">2370 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG Odyssey Neo G7')">Buy it now</a>
@@ -118,7 +118,7 @@
           Mode, Free-Sync Premium, Height Adjustable Screen for Gamer Comfort,
           <br>
           VESA Mount Capability (LS27AG320NNXZA)</p>
-        <p>500 KM</p>
+        <p style=" font-weight: 800">500 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG Odyssey G32A ')">Buy it now</a>
@@ -133,7 +133,7 @@
           Monitor
           <br>
           with HDR 10, Futuristic Design for Any Desktop (LS32AG550ENXZA)</p>
-        <p>680 KM</p>
+        <p style=" font-weight: 800">680 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG Odyssey G55A')">Buy it now</a>
@@ -176,9 +176,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
