--- a/slusalice.html
+++ b/slusalice.html
@@ -4,189 +4,187 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slušalice/title>
-      <link rel="stylesheet" href="styles/style-menu.css">
-      <link rel="stylesheet" href="styles/style-box.css">
-      <link rel="stylesheet" href="styles/style-kontakt.css">
-      <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
-        rel='stylesheet'>
-      <link rel="stylesheet" href="styles/style-mainbox.css">
-      <link rel="stylesheet" href="styles/style-footer.css">
-      <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <link rel="stylesheet" href="styles/style-product.css">
-      <script src="scripts/buy.js"></script>
-    </head>
-    <body>
+    <title>Slušalice</title>
+    <link rel="stylesheet" href="styles/style-menu.css">
+    <link rel="stylesheet" href="styles/style-box.css">
+    <link rel="stylesheet" href="styles/style-kontakt.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
+      rel='stylesheet'>
+    <link rel="stylesheet" href="styles/style-mainbox.css">
+    <link rel="stylesheet" href="styles/style-footer.css">
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles/style-product.css">
+    <script src="scripts/buy.js"></script>
+  </head>
+  <body>
 
-      <div class="menu_bar">
-        <header>
-          <a href="Index.html" class="logo">GamingStore</a>
-          <ul class="navigacijska-traka">
-            <li><a href="Index.html">Home</a></li>
-            <li><a href="GamingPC.html">Gaming PC</a></li>
-            <li><a href="Laptopi.html">Laptopi</a></li>
-            <li><a href="Monitori.html">Monitori</a></li>
-            <li><a href="Komponente.html">Komponente</a></li>
-            <li><a href="Periferije.html">Periferije</a></li>
-            <li><a href="Konzole.html">Konzole</a></li>
+    <div class="menu_bar">
+      <header>
+        <a href="Index.html" class="logo">GamingStore</a>
+        <ul class="navigacijska-traka">
+          <li><a href="Index.html">Home</a></li>
+          <li><a href="GamingPC.html">Gaming PC</a></li>
+          <li><a href="Laptopi.html">Laptopi</a></li>
+          <li><a href="Monitori.html">Monitori</a></li>
+          <li><a href="Komponente.html">Komponente</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
+          <li><a href="Konzole.html">Konzole</a></li>
 
-          </ul>
-          <div class="action">
-            <div class="searchBox">
-              <a href="#"><i class='bx bx-search'></i></a>
-              <input type="text" placeholder="Search">
-            </div>
+        </ul>
+        <div class="action">
+          <div class="searchBox">
+            <a href="#"><i class='bx bx-search'></i></a>
+            <input type="text" placeholder="Search">
           </div>
-        </header>
-      </div>
-
-
-
-
-      <div class="product-container">
-
-        <div class="product-box">
-          <img src="images/slusalice/sluse1.jpg" alt="">
-          <h2>Logitech G PRO Gaming Headset</h2>
-          <p> Blue VO!CE, Detachable Microphone,
-            <br>
-            Comfortable Memory Foam Ear Pads, <br> DTS Headphone 7.1 and 50 mm
-            PRO
-            G
-            <br>
-            Drivers, Official League of Legends Edition
-          </p>
-          <p>260 KM </p>
-
-          <div class="opcije">
-            <a href="#" onclick="buyProduct('Logitech G PRO Gaming Headset')">Buy
-              it now</a>
-          </div>
-
         </div>
+      </header>
+    </div>
 
-        <div class="product-box">
-          <img src="images/slusalice/sluse2.jpg" alt="">
-          <h2>HyperX Cloud Core </h2>
-          <p> Wireless Gaming Headset for PC, DTS Headphone:X <br>
-            Spatial Audio, Memory Foam Ear Pads, <br> Durable Aluminum Frame,
-            Detachable <br>Noise Cancelling Microphone</p>
-          <p>200 KM</p>
 
-          <div class="opcije">
-            <a href="#" onclick="buyProduct('HyperX Cloud Core')">Buy it now</a>
-          </div>
 
+
+    <div class="product-container">
+
+      <div class="product-box">
+        <img src="images/slusalice/sluse1.jpg" alt="">
+        <h2>Logitech G PRO Gaming Headset</h2>
+        <p> Blue VO!CE, Detachable Microphone,
+          <br>
+          Comfortable Memory Foam Ear Pads, <br> DTS Headphone 7.1 and 50 mm
+          PRO
+          G
+          <br>
+          Drivers, Official League of Legends Edition
+        </p>
+        <p style=" font-weight: 800">260 KM </p>
+
+        <div class="opcije">
+          <a href="#" onclick="buyProduct('Logitech G PRO Gaming Headset')">Buy
+            it now</a>
         </div>
-
-        <div class="product-box">
-          <img src="images/slusalice/sluse3.jpg" alt="">
-          <h2>JBL Quantum 400 </h2>
-          <p>Wired Over-Ear <br> Gaming Headphones with USB and <br>
-            Game-Chat Balance Dial <br> Black</p>
-          <p>200 KM</p>
-
-          <div class="opcije">
-            <a href="#" onclick="buyProduct('JBL Quantum 400 ')">Buy it now</a>
-          </div>
-
-        </div>
-
-        <div class="product-box">
-          <img src="images/slusalice/sluse4.jpg" alt="">
-          <h2>Razer BlackShark V2 </h2>
-          <p>X Gaming Headset: 7.1 Surround Sound - 50mm <br>
-            Drivers - Memory Foam Cushion for PC, PS4, PS5<br> Switch, Xbox One,
-            Xbox Series X|S, Mobile -<br> 3.5mm Audio Jack - Classic Black</p>
-          <p>120 KM</p>
-
-          <div class="opcije">
-            <a href="#" onclick="buyProduct('Razer BlackShark V2')">Buy it now</a>
-          </div>
-
-        </div>
-
-        <div class="product-box">
-          <img src="images/slusalice/sluse5.jpg" alt="">
-          <h2>Logitech G435</h2>
-          <p> LIGHTSPEED and Bluetooth Wireless Gaming<br> Headset
-            Lightweight over-ear headphones, built-in mics,<br> 18h battery,
-            compatible with Dolby Atmos, PC, PS4,<br> PS5, Nintendo Switch,
-            Mobile
-            <br>
-            Black</p>
-          <p>140 KM</p>
-
-          <div class="opcije">
-            <a href="#" onclick="buyProduct('Logitech G435')">Buy it now</a>
-          </div>
-
-        </div>
-
-        <div class="product-box">
-          <img src="images/slusalice/sluse6.jpg" alt="">
-          <h2>SteelSeries Arctis Nova</h2>
-          <p> 1P Multi-System Gaming Headset — Hi-Fi
-            Drivers <br> — 360° Spatial Audio <br> — Comfort Design — Durable
-            <br>
-            —
-            Lightweight
-            — Noise-Cancelling Mic — <br> PS5/PS4, PC, Xbox, Switch - White</p>
-          <p>100 KM</p>
-
-          <div class="opcije">
-            <a href="#" onclick="buyProduct('SteelSeries Arctis Nova')">Buy it
-              now</a>
-          </div>
-
-        </div>
-
 
       </div>
 
+      <div class="product-box">
+        <img src="images/slusalice/sluse2.jpg" alt="">
+        <h2>HyperX Cloud Core </h2>
+        <p> Wireless Gaming Headset for PC, DTS Headphone:X <br>
+          Spatial Audio, Memory Foam Ear Pads, <br> Durable Aluminum Frame,
+          Detachable <br>Noise Cancelling Microphone</p>
+        <p style=" font-weight: 800">200 KM</p>
 
-      <footer>
-        <div class="footer-content">
-          <div class="social">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-          </div>
-          <ul class="list">
-            <li>
-              <a href="#">GamingPC</a>
-            </li>
-
-            <li>
-              <a href="#">Laptopi</a>
-            </li>
-
-            <li>
-              <a href="#">Monitori</a>
-            </li>
-
-            <li>
-              <a href="#">Komponente</a>
-            </li>
-
-            <li>
-              <a href="#">Periferije</a>
-            </li>
-
-            <li>
-              <a href="#">Konzole</a>
-            </li>
-            <li>
-              <a href="#">Kontakt</a>
-            </li>
-          </ul>
-          <p class="copyright">copyright© 2022 Ahmed</p>
+        <div class="opcije">
+          <a href="#" onclick="buyProduct('HyperX Cloud Core')">Buy it now</a>
         </div>
-      </footer>
 
-    </body>
-  </html>
+      </div>
+
+      <div class="product-box">
+        <img src="images/slusalice/sluse3.jpg" alt="">
+        <h2>JBL Quantum 400 </h2>
+        <p>Wired Over-Ear <br> Gaming Headphones with USB and <br>
+          Game-Chat Balance Dial <br> Black</p>
+        <p style=" font-weight: 800">200 KM</p>
+
+        <div class="opcije">
+          <a href="#" onclick="buyProduct('JBL Quantum 400 ')">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/slusalice/sluse4.jpg" alt="">
+        <h2>Razer BlackShark V2 </h2>
+        <p>X Gaming Headset: 7.1 Surround Sound - 50mm <br>
+          Drivers - Memory Foam Cushion for PC, PS4, PS5<br> Switch, Xbox One,
+          Xbox Series X|S, Mobile -<br> 3.5mm Audio Jack - Classic Black</p>
+        <p style=" font-weight: 800">120 KM</p>
+
+        <div class="opcije">
+          <a href="#" onclick="buyProduct('Razer BlackShark V2')">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/slusalice/sluse5.jpg" alt="">
+        <h2>Logitech G435</h2>
+        <p> LIGHTSPEED and Bluetooth Wireless Gaming<br> Headset
+          Lightweight over-ear headphones, built-in mics,<br> 18h battery,
+          compatible with Dolby Atmos, PC, PS4,<br> PS5, Nintendo Switch,
+          Mobile
+          <br>
+          Black</p>
+        <p style=" font-weight: 800">140 KM</p>
+
+        <div class="opcije">
+          <a href="#" onclick="buyProduct('Logitech G435')">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/slusalice/sluse6.jpg" alt="">
+        <h2>SteelSeries Arctis Nova</h2>
+        <p> 1P Multi-System Gaming Headset — Hi-Fi
+          Drivers <br> — 360° Spatial Audio <br> — Comfort Design — Durable
+          <br>
+          —
+          Lightweight
+          — Noise-Cancelling Mic — <br> PS5/PS4, PC, Xbox, Switch - White</p>
+        <p style=" font-weight: 800">100 KM</p>
+
+        <div class="opcije">
+          <a href="#" onclick="buyProduct('SteelSeries Arctis Nova')">Buy it
+            now</a>
+        </div>
+
+      </div>
+
+
+    </div>
+
+
+    <footer>
+      <div class="footer-content">
+        <div class="social">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <ul class="list">
+          <li>
+            <a href="#">GamingPC</a>
+          </li>
+
+          <li>
+            <a href="#">Laptopi</a>
+          </li>
+
+          <li>
+            <a href="#">Monitori</a>
+          </li>
+
+          <li>
+            <a href="#">Komponente</a>
+          </li>
+
+          <li>
+            <a href="#">Periferije</a>
+          </li>
+
+          <li>
+            <a href="#">Konzole</a>
+          </li>
+
+        </ul>
+        <p class="copyright">copyright© 2022 Ahmed</p>
+      </div>
+    </footer>
+
+  </body>
+</html>
