--- a/ssd.html
+++ b/ssd.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -55,7 +55,7 @@
           Upgrade PC or Laptop Memory and Storage for IT Pros, Creators,<br>
           Everyday Users, MZ-77E1T0B/AM
         </p>
-        <p>200 KM</p>
+        <p style=" font-weight: 800">200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG 870 EVO')">Buy it now</a>
@@ -68,7 +68,7 @@
         <h2>Kingston 480GB</h2>
         <p> A400 SATA 3 2.5" <br> Internal SSD SA400S37/480G <br> - HDD
           Replacement for Increase Performance</p>
-        <p>54 KM</p>
+        <p style=" font-weight: 800">54 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Kingston 480GB ')">Buy it now</a>
@@ -83,7 +83,7 @@
           V-NAND <br> Technology, Storage and Memory Expansion for Gaming,
           Graphics <br>
           w/ Heat Control, Max Speed, MZ-V7S2T0B/AM </p>
-        <p>380 KM</p>
+        <p style=" font-weight: 800">380 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG 970 EVO Plus')">Buy it now</a>
@@ -98,7 +98,7 @@
           <br>
           State Drive Memory Card, <br> Maximum Speed, Thermal Control,
           MZ-V8P1T0B</p>
-        <p>260 KM</p>
+        <p style=" font-weight: 800">260 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG 980 PRO')">Buy it now</a>
@@ -113,7 +113,7 @@
           Internal Solid State Drive, Upgrade Desktop PC or Laptop Memory <br>
           and Storage for IT Pros,
           Creators, Everyday Users, MZ-77Q1T0B</p>
-        <p>280 KM</p>
+        <p style=" font-weight: 800">280 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SAMSUNG 870 QVO')">Buy it now</a>
@@ -128,7 +128,7 @@
           Internal Solid State Drive
           SSD- SATA III 6 Gb/s, <br>
           2.5"/7mm, Up to 560 MB/s - WDS500G3B0A</p>
-        <p>80 KM</p>
+        <p style=" font-weight: 800">80 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Western Digital')">Buy it now</a>
@@ -172,9 +172,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
