--- a/tastatura.html
+++ b/tastatura.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -55,7 +55,7 @@
           Factor - 8-Zone RGB Illumination – <br> IP32 Water & Dust Resistant –
           Whisper Quiet Gaming Switch – <br> Gaming Grade Anti-Ghosting
         </p>
-        <p>88 KM</p>
+        <p style=" font-weight: 800">88 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('SteelSeries Apex 3')">Buy it now</a>
@@ -71,7 +71,7 @@
           Detachable
           Type-C Cable - <br> Doubleshot PBT Keycaps - Ergonomic Wrist Rest
         </p>
-        <p>250 KM</p>
+        <p style=" font-weight: 800">250 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Razer Huntsman V2 TKL')">Buy it now</a>
@@ -84,7 +84,7 @@
         <h2>EVGA Z15 RGB Gaming Keyboard</h2>
         <p> RGB Backlit LED, Hotswappable <br>
           Mechanical Kailh Speed Silver Switches <br> (Linear), 821-W1-15US-KR</p>
-        <p>200 KM</p>
+        <p style=" font-weight: 800">200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('EVGA Z15 RGB Gaming Keyboard')">Buy
@@ -98,7 +98,7 @@
         <h2>RK ROYAL KLUDGE RK61</h2>
         <p> Wired 60% Mechanical Gaming Keyboard RGB Backlit <br>
           Ultra-Compact Hot- <br> Swappable Red Switch White</p>
-        <p>110 KM</p>
+        <p style=" font-weight: 800">110 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('RK ROYAL KLUDGE RK61')">Buy it now</a>
@@ -113,7 +113,7 @@
           LED Backlit Programmable Keys | <br> USB Wired | for Mac and Windows
           PC |
           Hotswap Gateron Optical Blue Switches | Red</p>
-        <p>160 KM</p>
+        <p style=" font-weight: 800">160 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('HK Gaming GK61')">Buy it now</a>
@@ -128,7 +128,7 @@
           Professional Gaming Keypad with 7 Onboard Macro Keys, Detachable Wrist
           <br>
           Rest, 42 Keys (Black-Blue Switch)</p>
-        <p>90 KM</p>
+        <p style=" font-weight: 800">90 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Redragon K585 DITI')">Buy it now</a>
@@ -172,9 +172,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
