--- a/web kamera.html
+++ b/web kamera.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -55,7 +55,7 @@
           Clear Stereo Audio, HD Light Correction, <br>Works with Skype, Zoom,
           FaceTime, Hangouts, <br> PC/Mac/Laptop/Macbook/Tablet - Black
         </p>
-        <p>140 KM</p>
+        <p style=" font-weight: 800">140 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Logitech C920x')">Buy it now</a>
@@ -71,7 +71,7 @@
           and
 
           Play, for Zoom/Skype/Teams, <br> Conferencing and Video Calling</p>
-        <p>100 KM</p>
+        <p style=" font-weight: 800">100 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('NexiGo N60')">Buy it now</a>
@@ -87,7 +87,7 @@
           Dual AI
 
           Noise-Cancelling Mics,<br> Works with Teams/Zoom/Webex/Google</p>
-        <p>390 KM</p>
+        <p style=" font-weight: 800">390 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('NexiGo Zoom')">Buy it now</a>
@@ -103,7 +103,7 @@
           for
 
           Video Conferencing, Teaching, <br>Streaming, and Gaming-D04
-          <p>70 KM</p>
+          <p style=" font-weight: 800">70 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('DEPSTECH Webcam')">Buy it
@@ -121,7 +121,7 @@
 
             Style Control, works with OBS, <br> Zoom, Teams, and more, for
             PC/Mac</p>
-          <p>340 KM</p>
+          <p style=" font-weight: 800">340 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Elgato Facecam')">Buy it
@@ -137,7 +137,7 @@
             mic, HD Auto Light Correction, Wide<br> Field of View, Works with
             Microsoft Teams, Zoom, <br>Google Voice,
             PC/Mac/Laptop/Macbook/Tablet</p>
-          <p>200 KM</p>
+          <p style=" font-weight: 800">200 KM</p>
 
           <div class="opcije">
             <a href="#" onclick="buyProduct('Logitech Brio ')">Buy it
@@ -182,9 +182,7 @@
             <li>
               <a href="#">Konzole</a>
             </li>
-            <li>
-              <a href="#">Kontakt</a>
-            </li>
+
           </ul>
           <p class="copyright">copyright© 2022 Ahmed</p>
         </div>
