--- a/xbox.html
+++ b/xbox.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -53,7 +53,7 @@
         <h2>Xbox Series S</h2>
         <p> 512 GB with Wireless Controller <br> Gilded Hunter Bundle
         </p>
-        <p>700 KM</p>
+        <p style=" font-weight: 800">700 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Xbox Series S')">Buy it now</a>
@@ -65,7 +65,7 @@
         <img src="images/xbox/x2.jpg" alt="">
         <h2>Xbox Series S</h2>
         <p> 512 GB with Wireless Controller <br> Fortnite & Rocket League Bundle</p>
-        <p>720 KM</p>
+        <p style=" font-weight: 800">720 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Xbox Series S')">Buy it now</a>
@@ -78,7 +78,7 @@
         <h2>Microsoft Xbox One X</h2>
         <p> 1TB Console Wireless Controller: Xbox One X
           Enhanced,<br> HDR, Native 4K, Ultra HD (2017 Model) (Renewed) </p>
-        <p>800 KM</p>
+        <p style=" font-weight: 800">800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Microsoft Xbox One X')">Buy it now</a>
@@ -90,7 +90,7 @@
         <img src="/images/xbox/x4.jpg" alt="">
         <h2>Microsoft Xbox 360</h2>
         <p> 20GB Console <br> (Renewed)</p>
-        <p>410 KM</p>
+        <p style=" font-weight: 800">410 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Microsoft Xbox 360')">Buy it now</a>
@@ -136,9 +136,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
