--- a/zvucnik.html
+++ b/zvucnik.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -59,7 +59,7 @@
           <br>
           Sound, USB Powered with a 3.5mm Connector
         </p>
-        <p>60 KM</p>
+        <p style=" font-weight: 800">60 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Redragon GS500')">Buy it now</a>
@@ -74,7 +74,7 @@
           Computer Speakers for Desktop with Bass Diaphragms<br> & 4 Speaker
           Units,
           Bluetooth 5.0 or 3.5mm AUX-in for<br> Laptop Tablet Monitor Phone</p>
-        <p>120 KM</p>
+        <p style=" font-weight: 800">120 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Computer Speakers')">Buy it now</a>
@@ -90,7 +90,7 @@
           PC/Laptops/Desktops/Phone/Ipad/Game
           <br>
           Machine (5Wx2)</p>
-        <p>70 KM</p>
+        <p style=" font-weight: 800">70 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('INSMART Computer Speakers')">Buy it
@@ -107,7 +107,7 @@
           Watts
           <br>
           RMS</p>
-        <p>240 KM</p>
+        <p style=" font-weight: 800">240 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Edifier R1280T')">Buy it now</a>
@@ -123,7 +123,7 @@
           Input for
           <br>
           Cellphone, Tablet, Desktop, Laptop, or Gaming</p>
-        <p>200 KM</p>
+        <p style=" font-weight: 800">200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Cyber Acoustics CA-3908 ')">Buy it
@@ -138,7 +138,7 @@
         <p> A5+ Plus Powered Speaker | Desktop Monitor Speakers<br>
           Computer Sound System | 150W Premium Powered<br> Bookshelf Stereo
           Speakers, AUX Audio, <br> RCA Inputs/Outputs, Remote Control (White)</p>
-        <p>800 KM</p>
+        <p style=" font-weight: 800">800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Audioengine')">Buy it now</a>
@@ -182,9 +182,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
