--- a/Monitori.html
+++ b/Monitori.html
@@ -25,7 +25,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -118,9 +118,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
