--- a/asus-laptop.html
+++ b/asus-laptop.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -55,7 +55,7 @@
           Core i7-12650H, <br> GeForce RTX 3060, 16GB DDR5, 512GB SSD,
           Thunderbolt 4, <br> Windows 11 Home, Off Black, FX517ZM-AS7
         </p>
-        <p>2560 KM</p>
+        <p style=" font-weight: 800">2560 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS TUF Dash 15 (2022) Gaming Laptop<')">Buy
@@ -71,7 +71,7 @@
           Display, NVIDIA GeForce RTX 3070 Ti,<br> Intel Core i9 12900H, 16GB
           DDR5,
           1TB SSD, RGB Keyboard, <br> Windows 11 Home, G533ZW-AS94</p>
-        <p>3800 KM</p>
+        <p style=" font-weight: 800">3800 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -89,7 +89,7 @@
           FHD, NVIDIA GeForce RTX 3080, <br> AMD Ryzen 7 5800H, 16GB DDR4, 1TB
           SSD,
           Opti-Mechanical <br> RGB Keyboard, Windows 10, G533QS-DS76</p>
-        <p>4600 KM</p>
+        <p style=" font-weight: 800">4600 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -107,7 +107,7 @@
           Display, NVIDIA GeForce RTX 3080, <br> AMD Ryzen 9 5900HX, 16GB DDR4,
           1TB
           SSD, Opti-Mechanical <br> RGB Keyboard, Windows 11, G533QS-DS94</p>
-        <p>3850 KM</p>
+        <p style=" font-weight: 800">3850 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -124,7 +124,7 @@
           Intel Core i5-11400H Processor, <br> GeForce RTX 3050, 8GB DDR4 RAM,
           512GB
           PCIe SSD, Wi-Fi 6, <br> Windows 11 Home, FX706HCB-ES51</p>
-        <p>1800 KM</p>
+        <p style=" font-weight: 800">1800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS TUF Gaming F17 Gaming Laptop')">Buy
@@ -140,7 +140,7 @@
           4800H, GeForce<br> RTX 3050 Ti, 32GB RAM, 1TB SSD, Webcam, RGB
           Backlit<br>
           Keyboard, Wi-Fi 6, Windows 11 Home, Black</p>
-        <p>2300 KM</p>
+        <p style=" font-weight: 800">2300 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS TUF A15 Gaming Laptop')">Buy it
@@ -184,9 +184,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
