--- a/lenovo-laptop.html
+++ b/lenovo-laptop.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -57,7 +57,7 @@
           6600H <br> - 8GB DDR5 - 258GB SSD - <br> Win 11 - Free 3-month Xbox
           GamePass
         </p>
-        <p>1800 KM</p>
+        <p style=" font-weight: 800">1800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Lenovo IdeaPad Gaming 3 - 2022')">Buy
@@ -73,7 +73,7 @@
           16GB RAM, 512GB Storage, <br> NVIDIA GeForce RTX 3050Ti, <br> Windows
           10H,
           Phantom Blue</p>
-        <p>2400 KM</p>
+        <p style=" font-weight: 800">2400 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Lenovo Legion 5 Gaming Laptop')">Buy
@@ -89,7 +89,7 @@
           - 512GB NVMe TLC SSD - <br> NVIDIA GeForce RTX 3060 Graphics - 15.6"
           FHD
           120 Hz - <br> Windows 11 Home - Phantom Blue</p>
-        <p>2400 KM</p>
+        <p style=" font-weight: 800">2400 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -105,7 +105,7 @@
           7-5800H,GeForce RTX 3070 8GB (TGP 130W), <br> USB-C,Win11 Home,with
           HDMI <br>
           Cable (32GB RAM | 1TB PCIe SSD)</p>
-        <p>3160 KM</p>
+        <p style=" font-weight: 800">3160 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Lenovo Legion 5')">Buy it now</a>
@@ -119,7 +119,7 @@
         <p> 15.6" FHD Gaming Laptop 2022, 11th Gen Intel <br>
           i5-11300H(up to 4.4GHz), <br> 16GB RAM 1TB NVMe SSD, GeForce GTX 1650,
           USB-A&C RJ45, <br> Windows 11</p>
-        <p>1650 KM</p>
+        <p style=" font-weight: 800">1650 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Lenovo IdeaPad 3i')">Buy it now</a>
@@ -135,7 +135,7 @@
           Blue
           (16GB RAM
           + 1TB SSD)</p>
-        <p>2400 KM</p>
+        <p style=" font-weight: 800">2400 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Dell Inspiron Plus Laptop')">Buy it
@@ -179,9 +179,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
