--- a/maticna ploca.html
+++ b/maticna ploca.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -57,7 +57,7 @@
           <br>
           Addressable Gen 2 RGB Header and Aura Sync)
         </p>
-        <p>360 KM</p>
+        <p style=" font-weight: 800">360 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS ROG Strix B550-F')">Buy it now</a>
@@ -74,7 +74,7 @@
           Power
           <br>
           Stage</p>
-        <p>420 KM</p>
+        <p style=" font-weight: 800">420 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS AM4 TUF Gaming X570-Plus')">Buy
@@ -89,7 +89,7 @@
         <p> WiFi ProSeries Motherboard <br> (AMD AM4, DDR4, PCIe
           4.0, SATA 6Gb/s, M.2, <br> USB 3.2 Gen 1, Wi-Fi, <br> D-SUB/HDMI/DP,
           Micro-ATX)</p>
-        <p>240 KM</p>
+        <p style=" font-weight: 800">240 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI B550M PRO-VDH')">Buy it now</a>
@@ -105,7 +105,7 @@
           4,5xM.2,1xPCIe 5.0 M.2, ROG Hyper M.2 Card,Front <br> panel USB 3.2
           Gen 2x2
           Type-C)</p>
-        <p>720 KM</p>
+        <p style=" font-weight: 800">720 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('ASUS ROG Strix Z690-E Gaming')">Buy
@@ -122,7 +122,7 @@
           3.2 Gen
           <br>
           2, Wi-Fi 6, DP/HDMI, Mystic Light RGB)</p>
-        <p>300 KM</p>
+        <p style=" font-weight: 800">300 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI MPG Z490 Gaming')">Buy it now</a>
@@ -136,7 +136,7 @@
         <p> WiFi Gaming Motherboard (ATX, 12th Gen Intel <br>
           Core, LGA 1700 Socket, DDR5, <br> PCIe 5, 2.5G LAN, M.2 Slots, Wi-Fi
           6E)</p>
-        <p>520 KM</p>
+        <p style=" font-weight: 800">520 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI MAG Z690 Tomahawk')">Buy it now</a>
@@ -180,9 +180,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
