--- a/miš.html
+++ b/miš.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -56,7 +56,7 @@
           Programmable Buttons - <br> Focus Pro 30K Optical Sensor - Classic
           Black
         </p>
-        <p>300 KM</p>
+        <p style=" font-weight: 800">300 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Razer Basilisk V3 Pro')">Buy it now</a>
@@ -70,7 +70,7 @@
         <p> 8500K DPI Optical Sensor - 62g <br>
           Lightweight Design - Chroma RGB Lighting <br> 6 Programmable Buttons-
           Anti-Slip Grip Tape Included <br> Classic Black</p>
-        <p>100 KM</p>
+        <p style=" font-weight: 800">100 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Razer DeathAdder v2 Mini Gaming ')">Buy
@@ -86,7 +86,7 @@
           Wired Gaming Mouse with 12,400DPI, <br> High Precision, <br> 20
           Programmable
           Mouse Buttons</p>
-        <p>64 KM</p>
+        <p style=" font-weight: 800">64 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Redragon M908 Impact RGB LED')">Buy
@@ -100,7 +100,7 @@
         <h2>Glorious Gaming Mouse </h2>
         <p>Model O 67 g Superlight <br> Honeycomb Mouse, <br>
           Matte Black Mouse <br> USB Gaming Mouse</p>
-        <p>88 KM</p>
+        <p style=" font-weight: 800">88 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Glorious Gaming Mou')">Buy it now</a>
@@ -113,7 +113,7 @@
         <h2>Corsair Scimitar RGB Elite</h2>
         <p> MOBA/MMO Gaming Mouse, <br> Black, <br> Backlit RGB
           LED, <br> 18000 DPI, Optical</p>
-        <p>100 KM</p>
+        <p style=" font-weight: 800">100 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Corsair Scimitar RGB Elite')">Buy it
@@ -128,7 +128,7 @@
         <p> Lightspeed Wireless Gaming Mouse <br>with Hero 25K Sensor,
           PowerPlay Compatible, <br> Tunable Weights and Lightsync RGB - <br>
           Black</p>
-        <p>240 KM</p>
+        <p style=" font-weight: 800">240 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Logitech G502')">Buy it now</a>
@@ -172,9 +172,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
