--- a/msi-monitor.html
+++ b/msi-monitor.html
@@ -29,7 +29,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
           <li><a href="Kontakt.html">Kontakt</a></li>
         </ul>
@@ -55,7 +55,7 @@
           165Hz, FreeSync Premium, HDR 400, HDMI, Displayport, USB C, Tilt, <br>
           Swivel, Height Adjustable
         </p>
-        <p>730 KM</p>
+        <p style=" font-weight: 800">730 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
@@ -69,7 +69,7 @@
         <p> 24" Gaming Monitor, 1920 x 1080 (FHD), <br> VA, 75Hz,
           <br>
           FreeSync, VGA Port HDMI, Tilt</p>
-        <p>330 KM</p>
+        <p style=" font-weight: 800">330 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI G241VC')">Buy it now</a>
@@ -83,7 +83,7 @@
         <p> 24" Gaming Monitor, 1920 x 1080 (FHD), IPS, 1ms, 75Hz,
           <br>
           FreeSync, HDMI, Displayport, Tilt</p>
-        <p>320 KM</p>
+        <p style=" font-weight: 800">320 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI G241V E2')">Buy it now</a>
@@ -97,7 +97,7 @@
         <p> Full HD Rapid-IPS 1ms 2560 x 1080 Ultra Wide 200Hz Refresh Rate
           <br>
           HDR Ready G-Sync Compatible 30” Gaming Monitor (Optix MAG301RF)</p>
-        <p>460 KM</p>
+        <p style=" font-weight: 800">460 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI Full HD Rapid-IPS')">Buy it now</a>
@@ -112,7 +112,7 @@
           <br>
           FreeSync, HDR Ready HDMI, Displayport, USB C, Tilt, Swivel, Height
           Adjustable</p>
-        <p>620 KM</p>
+        <p style=" font-weight: 800">620 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI MAG301CR2')">Buy it now</a>
@@ -126,7 +126,7 @@
         <p>Full QHD Anti-Glare 1ms 2560 x 1440 175Hz Refresh Rate HDR Ready
           <br>
           USB/DP/HDMI 31.5” Monitor (Optix MPG321QRF-QD)</p>
-        <p>1120 KM</p>
+        <p style=" font-weight: 800">1120 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('MSI Full QHD')">Buy it now</a>
@@ -169,9 +169,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
