--- a/nitendo.html
+++ b/nitendo.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -53,7 +53,7 @@
         <h2>Nintendo Switch</h2>
         <p>™ with Neon Blue and Neon Red Joy‑Con™
         </p>
-        <p>600 KM</p>
+        <p style=" font-weight: 800">600 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Nintendo Switch')">Buy it now</a>
@@ -65,7 +65,7 @@
         <img src="/images/nitendo/n2.jpg" alt="">
         <h2>Nintendo 64 System </h2>
         <p> Video Game Console (Renewed)</p>
-        <p>320 KM</p>
+        <p style=" font-weight: 800">320 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Nintendo 64 System')">Buy it now</a>
@@ -78,7 +78,7 @@
         <h2>Wii Console</h2>
         <p> Bonus Wii Sports Resort & Wii MotionPlus Bundle
           (Renewed)</p>
-        <p>550 KM </p>
+        <p style=" font-weight: 800">550 KM </p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Wii Console')">Buy it now</a>
@@ -124,9 +124,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
