--- a/procesor.html
+++ b/procesor.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -54,7 +54,7 @@
         <p> 12-core, <br> 24-Thread Unlocked <br> Desktop
           Processor
         </p>
-        <p>680 KM</p>
+        <p style=" font-weight: 800">680 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('AMD Ryzen 9 5900X')">Buy it now</a>
@@ -67,7 +67,7 @@
         <h2>AMD Ryzen™ 7 5700X </h2>
         <p> 8-Core 16-Thread<br> Unlocked <br> Desktop
           Processor</p>
-        <p>410 KM</p>
+        <p style=" font-weight: 800">410 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('AMD Ryzen™ 7 5700X 8-Core')">Buy it
@@ -83,7 +83,7 @@
           Unlocked LGA1200 <br>(Intel® 500 Series & Select 400 Series
           Chipset)
           125W</p>
-        <p>380 KM</p>
+        <p style=" font-weight: 800">380 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Intel® Core™ i5-11600KF')">Buy it now</a>
@@ -96,7 +96,7 @@
         <h2>Intel Core i7-12700KF</h2>
         <p> Desktop Processor 12 (8P+4E) <br> Cores up to
           5.0 GHz Unlocked <br> LGA1700 600 Series Chipset 125W</p>
-        <p>520 KM</p>
+        <p style=" font-weight: 800">520 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Intel Core i7-12700KF')">Buy it now</a>
@@ -109,7 +109,7 @@
         <h2>AMD Ryzen 5 3600 </h2>
         <p> 6-Core, 12-Thread <br>Unlocked Desktop Processor
           with <br> Wraith Stealth Cooler</p>
-        <p>240 KM</p>
+        <p style=" font-weight: 800">240 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('AMD Ryzen 5 3600')">Buy it now</a>
@@ -120,11 +120,11 @@
       <div class="product-box-procesor">
         <img src="images/procesor/procesor6.jpg" alt="">
         <h2>Intel Core i9-11900K</h2>
-        <p> Desktop Processor 8 Cores<br>
+        <p style=" font-weight: 800"> Desktop Processor 8 Cores<br>
           up to 5.3 GHz Unlocked<br>
           LGA1200 (Intel 500 Series & Select 400 Series Chipset) </p>
 
-        <p>800 KM</p>
+        <p style=" font-weight: 800">800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Intel Core i9-11900K')">Buy it now</a>
@@ -168,9 +168,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
