--- a/ps4.html
+++ b/ps4.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -53,7 +53,7 @@
         <h2>Sony Playstation PS4</h2>
         <p> 1TB Black Console
         </p>
-        <p>600 KM</p>
+        <p style=" font-weight: 800">600 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('Sony Playstation PS4')">Buy it now</a>
@@ -77,7 +77,7 @@
         <img src="images/ps4/ps43.jpg" alt="">
         <h2>PlayStation 4 Slim</h2>
         <p> 1TB Console - Marvel's Spider-Man Bundle</p>
-        <p>900 KM</p>
+        <p style=" font-weight: 800">900 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('PlayStation 4 Slim')">Buy it now</a>
@@ -89,7 +89,7 @@
         <img src="images/ps4/ps44.jpg" alt="">
         <h2>PlayStation 4 Slim 1TB </h2>
         <p> Console (Renewed)</p>
-        <p>720 KM</p>
+        <p style=" font-weight: 800">720 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('PlayStation 4 Slim 1TB')">Buy it now</a>
@@ -102,7 +102,7 @@
         <h2>PlayStation 4 500GB Console</h2>
         <p> Uncharted 4 Limited Edition Bundle
           [Discontinued]</p>
-        <p>800 KM</p>
+        <p style=" font-weight: 800">800 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('PlayStation 4 500GB Console')">Buy it
@@ -115,7 +115,7 @@
         <img src="images/ps4/ps46.jpg" alt="">
         <h2>PlayStation 4 Slim</h2>
         <p> 1TB Limited Edition Console - Days of Play Bundle</p>
-        <p>800</p>
+        <p style=" font-weight: 800">800</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('PlayStation 4 Slim')">Buy it now</a>
@@ -159,9 +159,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
