--- a/ps5.html
+++ b/ps5.html
@@ -30,7 +30,7 @@
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
           <li><a href="Komponente.html">Komponente</a></li>
-          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Periferije.html">Periferija</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
 
         </ul>
@@ -53,7 +53,7 @@
         <h2>PlayStation 5 Console</h2>
         <p>Standard console
         </p>
-        <p>1200 KM</p>
+        <p style=" font-weight: 800">1200 KM</p>
 
         <div class="opcije">
           <a href="#" onclick="buyProduct('PlayStation 5 Console')">Buy it now</a>
@@ -65,7 +65,7 @@
         <img src="images/ps5/ps52.jpg" alt="">
         <h2>PlayStation PS5 Console </h2>
         <p>God of War Ragnarök Bundle</p>
-        <p>1400 KM</p>
+        <p style=" font-weight: 800">1400 KM</p>
 
         <div class="opcije">
           <a href="#"
@@ -114,9 +114,7 @@
           <li>
             <a href="#">Konzole</a>
           </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
+
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
       </div>
